force-app/main/default/objects/Booking_Details__c/Booking_Details__c.object-meta.xml
<CustomObject>
    <label>Booking Details</label>
    <nameField>
        <label>Flight Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>