force-app/main/default/objects/Booking_Details__c/fields/Booking_Class__c.field-meta.xml
<CustomField>
    <fullName>Booking_Class__c</fullName>
    <label>Booking Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Class</valueSetName>
    </valueSet>
</CustomField>