force-app/main/default/objects/Booking_Details__c/fields/Booking_UID__c.field-meta.xml
<CustomField>
    <fullName>Booking_UID__c</fullName>
    <description>This is the unique identifier. It is a composite key based on TicketNumber + DepartureTime.</description>
    <externalId>true</externalId>
    <label>Booking UID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>