force-app/main/default/objects/Booking_Details__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <label>Departure Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>