force-app/main/default/objects/Booking_Details__c/fields/PNR_ID__c.field-meta.xml
<CustomField>
    <fullName>PNR_ID__c</fullName>
    <label>PNR ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>