force-app/main/default/objects/Booking_Details__c/fields/Service_SSR__c.field-meta.xml
<CustomField>
    <fullName>Service_SSR__c</fullName>
    <label>Services (SSR)</label>
    <length>30</length>
    <type>Text</type>
</CustomField>