force-app/main/default/objects/Booking_Details__c/fields/Ticket_EMD_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_EMD_Number__c</fullName>
    <label>Ticket/EMD Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>